style.css
@font-face {
  font-family: 'sevensegment';
  src: url('Seven Segment.ttf') format('truetype');
}
body {
  pointer-events: none;
  padding: 1ch;
  font-family: 'sevensegment';
}
html {
  background-color: black;
  cursor: url('assets/cursor/default.svg'), default;
}
body > #clock {
  --rot: 0deg;
  position: absolute;
  pointer-events: none;
  user-select: none;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  margin: auto;
  width: 52ch;
  height: 52ch;
}
body > span {
  visibility: hidden;
  top: unset;
  bottom: 1ch;
  left: 1ch;
}

